2001-04-17 19:30 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * include/hbapi.h
     + Added typedef struct HB_NESTED_CLONED
     * Changed declaration of hb_arrayClone to hb_arrayClone( PHB_ITEM pArray, PHB_NESTED_CLONED pClonedList, BOOL *bCyclic )

   * source/vm/arrays.c
     ! Fixed hb_arrayClone() to correctly clone any array including RELATIVE Ciclic Referncing of any level.

   * source/vm/arrayshb.c
   * source/vm/classes.c
   * source/vm/hvm.c
     * Changed calls to hb_arrayClone() to pass 2 additional NULLs as 2nd. and 3rd. parameters.

2001-04-17 17:15 UTC-0400 David G. Holm <dholm@jsd-llc.com>
  * hb_slex.bc
  * hb_slex.vc
  * makefile.bc
  * makefile.vc
  * doc/funclist.txt
  * source/rtl/Makefile
  + source/rtl/dbdelim.prg
  * source/rtl/dummy.prg
    + Added __dbDelim() function for use by COPY TO DELIMITED.
      FIELD, NEXT, FOR, and WHILE clauses are implemented, but I
      don't know what the first and last two parameters are for.

2001-04-17 21:30 CET Martin Vogel <vogel@inttec.de>
   + contrib/libct/atnum.c
     + AFTERATNUM() function
     + BEFORATNUM() function
     + ATNUM()      function

   * contrib/libct/Makefile
     * changed library name to libct
     + added atnum.c
   * contrib/libct/makefile.bc
     * changed library name to libct
     + added atnum.c
   * contrib/libct/makefile.vc
     * changed library name to libct
     + added atnum.c

   + contrib/libct/tests/afteratn.prg
   + contrib/libct/tests/atnum.prg
   + contrib/libct/tests/beforatn.prg

   * contrib/libct/tests/Makefile
     + added afteratn.prg
     + added atnum.prg
     + added beforatn.prg

   * contrib/libct/ct.ch
     * error correction

2001-04-17 10:35 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * source/vm/arrays.c
     ! Fixed GPF when aCloning an Array with circular refrences to itself.

2001-04-17 18:40 CET Martin Vogel <vogel@inttec.de>
   * contrib/libct/readme.txt
     + Added paragraph for enhancements over original CT3 library
